# workhorse

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  RANKING_DESIGN.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
config/: providers.yaml  routing.yaml  session.yaml  system_prompt.md  tools.yaml
src/: lib.rs  main.rs
src/adapters/: mock.rs  mod.rs  openai_compat.rs  retry.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: analyzer.rs  learning_router.rs  mod.rs  ranking.rs  router.rs  session.rs
src/observability/: mod.rs
src/tools/: consent.rs  mcp_client.rs  mcp_tool.rs  mod.rs
tests/: litmus_adapter.rs  litmus_contract.rs  litmus_hardening.rs  litmus_ranking.rs  litmus_routing.rs  litmus_session.rs  litmus_tools.rs
